添加退出登录模块

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
 <script src="/js/bootstrap.min.js"></script>
 <script>
     $('#login').click(function () {
-        $.post('/login', {userName: 'admin', passWord: '123'}, function (result) {
+        $.post('/login', {userName: '942785030', passWord: '123456'}, function (result) {
             console.log(result)
         })
     })
