--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,19 +5,33 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-    <input type="text" class="txt" value="admin"/>
-    <input type="text" class="txt" value="123"/>
-    <input type="button" value="登陆" id="login">
+    <div class="setting">
+        <div class="land">
+            <div class="title">
+                <div class="title-left"></div>
+                <div class="title-right">
+                </div>
+            </div>
+            <div class="account">
+                <p>账号</p>
+                <input type="text" class="txt" value="admin"/>
+            </div>
+            <div class="account">
+                <p>密码</p>
+                <input type="text" class="txt" value="123"/>
+            </div>
+            <div class="keep">
+                <input type="checkbox" class="bz"/>
+                <p>保存用户信息</p>
+            </div>
+            <input type="button" class="ashore" value="登陆" id="login">
+        </div>
+    </div>
+
 </body>
 <script src="/js/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
-<script>
-    $('#login').click(function () {
-        $.post('/login', {userName: 'admin', passWord: '123'}, function (result) {
-            console.log(result)
-        })
-    })
-</script>
 </html>
