--- a/views/setimage.ejs
+++ b/views/setimage.ejs
@@ -6,17 +6,42 @@
 </head>
 <body>
 <input type="button" class="quit" value="退出">
+<input type="file" class="file" multiple>
+<input type="button" value="submit" class="sub">
 123123
 </body>
 <script src="/js/jquery.js"></script>
 <script>
     $(".quit").click(function(){
-        $.post("/logout", {}, function(data,status){
-                console.log(data);
+        $.post("/logout", {}, function (data,status) {
                 if (data.errorNo == 0) {
                    window.location.href="/login"
                 }
-            });
+        });
     });
+    $.post("/getallimage", {}, function (data,status) {
+       console.log(data)
+    });
+    $('.sub').click(function(){
+        var formData = new FormData()
+        for (var i = 0; i < $('.file')[0].files.length; i++) {
+            formData.append('file', $('.file')[0].files[i])
+        }
+        formData.append('imagePath', 'a')
+        formData.append('pagePath', 'index')
+        $.ajax({
+            url : '/uploadimage',
+            type : 'POST',
+            data : formData,
+            processData : false,
+            contentType : false,
+            success : function(data) {
+               console.log(data)
+            },
+            error : function(responseStr) {
+                console.log("error");
+            }
+        });
+    })
 </script>
 </html>
